--- a/PySpark_Project_Simulation.ipynb
+++ b/PySpark_Project_Simulation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46911c78",
+   "id": "3cd0255d",
    "metadata": {},
    "source": [
     "# Prep of the Env\n"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a4ed75",
+   "id": "8c3dc14b",
    "metadata": {},
    "source": [
     "# Start the ELT from Postgres into SnowFlake"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 489,
-   "id": "4b4a0393",
+   "id": "e6c41373",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
    "id": "fd8bfa04",
    "metadata": {},
    "source": [
-    "## Insert data from Spark into SnowFlake"
+    "## Export from Spark Dataframe to a multiple csv files"
    ]
   },
   {
@@ -242,16 +242,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ef3431",
+   "id": "3fadd865",
    "metadata": {},
    "source": [
-    "### Smaller chunks of the CSV"
+    "### testing the small chunks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 492,
-   "id": "4b207a3c",
+   "id": "96de5e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 494,
-   "id": "627651b2",
+   "id": "cd854d5e",
    "metadata": {},
    "outputs": [
     {
@@ -282,21 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
-   "id": "a392c66d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#source_path = path_csv\n",
-    "\n",
-    "#for i,chunk in enumerate(pd.read_csv(source_path, chunksize=40000)):\n",
-    " #   chunk.to_csv('/Users/kevinleiva/Desktop/Big_data/spark-warehouse/csv_files/data{}.csv'.format(i), index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 501,
-   "id": "bed38ade",
+   "id": "8753647c",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 496,
-   "id": "824158e9",
+   "id": "62d12b1d",
    "metadata": {},
    "outputs": [
     {
@@ -353,9 +340,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fe3d0c3",
+   "metadata": {},
+   "source": [
+    "## Insert the Data into Snowflake using Put and Copy into"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 497,
-   "id": "7e7b5d2c",
+   "id": "a1e26a78",
    "metadata": {},
    "outputs": [
     {
